--- a/dicodingnotesapp/src/main/AndroidManifest.xml
+++ b/dicodingnotesapp/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alvin.dicodingnotesapp">
 
-    <uses-permission android:name="com.alvin.mynotesap.READ_DATABASE"/>
+    <uses-permission android:name="com.alvin.mynotesapp.READ_DATABASE"/>
     <uses-permission android:name="com.alvin.mynotesapp.WRITE_DATABASE"/>
 
     <application
